--- a/fig.css
+++ b/fig.css
@@ -16,7 +16,7 @@ header {
 p,li {
    font-size: 16px;
   line-height: 2;
-   padding-left:2px;
+   margin-right:20px;
 }
  article {
   background: white;
