--- a/fig.css
+++ b/fig.css
@@ -19,7 +19,7 @@ p,li {
     padding-right:5px;
 }
  article {
-  background: white;
+  background:red;
    margin-left: 150px;
    margin-right: 5px;
    border-bottom: 3px solid #375e97;
