--- a/fig.css
+++ b/fig.css
@@ -25,7 +25,7 @@ p,li {
    border-bottom: 3px solid #375e97;
 }
 .e1 img,.n2 img,.n3 img  {
-  float: left;
+  float: right;
   padding-right:2px;
 }
 .n1 img {
