--- a/fig.css
+++ b/fig.css
@@ -26,11 +26,11 @@ p,li {
    margin-right: 5px;
    border-bottom: 3px solid #375e97;
 }
-.e1 img,.n3 img,.d2 img  {
+.e1 img,.n3 img,.dd1 img  {
   float: left;
   padding-right:2px;
 }
-.m3 img,.n1 img,.g3 img,.d3 img {
+.m3 img,.n1 img,.g3 img,.dd2 img {
   float: right;
    padding-left:2px;
    margin-right: 5px;
