--- a/fig.css
+++ b/fig.css
@@ -17,10 +17,9 @@ p,li {
    font-size: 16px;
   line-height: 2;
     padding-right:5px;
+  padding-left:5px;
 }
  article {
-   font-size: 16px;
-   line-height: 2;
   background:white;
    margin-left: 150px;
    margin-right: 5px;
