--- a/fig.css
+++ b/fig.css
@@ -34,7 +34,7 @@ p,li {
    padding-left:2px;
    margin-right: 5px;
 }
-.n2 img {
+.n2 img,.g1 img {
   float: center;
   text-align: center;
    padding-right:2px;
