--- a/fig.css
+++ b/fig.css
@@ -35,9 +35,7 @@ p,li {
    margin-right: 5px;
 }
 .n2 img,.g1 img {
-    float:left;    
-    position:relative;    
-    left:50%;   
+   margin:0 auto;  
   text-align: center;
    padding-right:2px;
 }
