--- a/fig.css
+++ b/fig.css
@@ -61,10 +61,12 @@ figure ul {
   display: flex;
 }
  figure li {
-  display: inline;
+ 
    padding:5px;
   text-align: center;
   flex: 4;
+    float: left;
+   width: 33%;
 } 
 
  /* info-box setup */
