--- a/fig.css
+++ b/fig.css
@@ -59,6 +59,7 @@ h3{
 figure ul {
   list-style-type: none;
   display: flex;
+   overflow: hidden;
 }
  figure li {
    list-style: none; 
@@ -66,6 +67,9 @@ figure ul {
    padding:5px;
   text-align: center;
     flex: 4;
+    float: left;
+   width: 33%;
+  height: 100px;
 } 
 
  /* info-box setup */
