--- a/fig.css
+++ b/fig.css
@@ -60,16 +60,17 @@ figure ul {
   list-style-type: none;
   display: flex;
    overflow: hidden;
+  margin-left: -10px;
 }
  figure li {
    list-style: none; 
   display: inline;
    padding:5px;
   text-align: center;
-    flex: 4;
     float: left;
    width: 33%;
-  height: 100px;
+  height: 100%;
+   padding-left: 5px;
 } 
 
  /* info-box setup */
