--- a/fig.css
+++ b/fig.css
@@ -60,7 +60,7 @@ figure ul {
   list-style-type: none;
   display: flex;
    overflow: hidden;
-  margin-left: -10px;
+  margin: 0px;
 }
  figure li {
    list-style: none; 
