--- a/fig.css
+++ b/fig.css
@@ -32,6 +32,10 @@ p,li {
   float: right;
    padding-left:5px;
 }
+.m3 img{
+  border-radius: 200px;
+  padding-left:5px;
+}
 .n2 img,.g1 img,.h1 img {
    margin:0 auto;  
   text-align: center;
