--- a/fig.css
+++ b/fig.css
@@ -21,7 +21,7 @@ p,li {
  article {
   background:white;
    margin-left: 150px;
-   margin-right: 500px;
+   margin-right: 5px;
    border-bottom: 3px solid #375e97;
 }
 .e1 img,.n3 img,.dd1 img,.h2 img  {
@@ -56,6 +56,7 @@ h3{
 }
   figure img {
     display: flex;
+    margin:0 auto;
    padding:5px;
     flex-flow: column;  
 } 
