--- a/fig.css
+++ b/fig.css
@@ -22,6 +22,8 @@ p,li {
   background:white;
    margin-left: 150px;
    margin-right: 5px;
+   padding-left:5px;
+   padding-right:5px;
    border-bottom: 3px solid #375e97;
 }
 .e1 img,.n3 img,.dd1 img,.h2 img  {
@@ -70,8 +72,8 @@ figure ul {
   display: inline;
   text-align: center;
     float: left;
-   padding-left: 10px;
-    flex: 2;
+   padding-left: 5px;
+    flex: 4;
 } 
 
  /* info-box setup */
