--- a/fig.css
+++ b/fig.css
@@ -58,7 +58,21 @@ h3{
     text-align:left
 }
  
-
+  figure img {
+    display: flex;
+    margin:0 auto;
+    flex-flow: column;  
+} 
+figure ul {
+  list-style-type: none;
+  display: flex;
+}
+ figure li {
+   list-style: none; 
+  display: inline;
+  text-align: center;
+   padding-left: 5px;
+}
  /* info-box setup */
 
   .info-box {
