--- a/fig.css
+++ b/fig.css
@@ -59,18 +59,16 @@ h3{
     font-size:20px;
     text-align:left
 }
- 
+ figure {
+margin:0 auto;
+}
   figure img {
     display: flex;
     margin:0 auto;
     flex-flow: column; 
     padding-left: 5px;
-    max-width:280px;
 } 
-figure {
-margin:0 auto;
-  
-}
+
 figure ul {
   list-style-type: none;
   display: flex;
@@ -81,6 +79,7 @@ figure ul {
   text-align: center;
    padding-left: 5px;
    overflow: hidden
+      flex: 1;
 }
  /* info-box setup */
 
