--- a/fig.css
+++ b/fig.css
@@ -59,7 +59,9 @@ h3{
     font-size:20px;
     text-align:left
 }
-
+ figure {
+margin:0 auto;
+}
   figure img {
     display: flex;
     margin:0 auto;
@@ -75,9 +77,9 @@ figure ul {
    list-style: none; 
   display: inline;
   text-align: center;
-   padding-left: 5px;
+   padding: 10px;
    overflow: hidden；
-      flex: 2;
+  flex: 1;
 }
  /* info-box setup */
 
