--- a/fig.css
+++ b/fig.css
@@ -72,7 +72,7 @@ figure ul {
    list-style: none; 
   display: inline;
   text-align: center;
-   padding: 10px;
+   padding: 3%;
    overflow: hidden；
   flex: 1;
 }
