--- a/fig.css
+++ b/fig.css
@@ -173,6 +173,6 @@ aside li {
 footer {
     text-align: left;
     font-size: 16px;
-  margin-top: 20px;
+  margin: 20px;
   background-color:#ebe8e8;
 }
