--- a/fig.css
+++ b/fig.css
@@ -61,7 +61,6 @@ h3{
 }
  figure {
 margin:0 auto;
-    display: flex;
 }
 figure ul {
   list-style-type: none;
@@ -72,7 +71,7 @@ figure ul {
    list-style: none; 
   display: inline;
   text-align: center;
-   padding: 3%;
+   padding: 5px;
    overflow: hidden；
   flex: 1;
 }
