--- a/fig.css
+++ b/fig.css
@@ -4,6 +4,8 @@ html {
   }
   body {
     margin: 0;
+    background: url(images/封面.jpg);
+    background-repeat: no-repeat;
   }
 * {
     box-sizing: border-box;
