--- a/fig.css
+++ b/fig.css
@@ -5,6 +5,7 @@ html {
   body {
     margin: 0;
     background-color: url(images/封面.jpg);
+    background-size:cover;
     background-repeat:no-repeat; 
     background-attachment:fixed;
   }
